[package]
name = "sensehat"
version = "0.2.1"
authors = ["Jonathan Pallant <github@thejpster.org.uk>"]
license-file = "LICENSE.md"
documentation = "https://docs.rs/crate/sensehat"
repository = "https://github.com/thejpster/sensehat-rs"
keywords = ["sensehat", "raspberry", "pi", "sensors"]
description = "Interface with the Raspberry Pi Foundation's official Sense Hat sensor board."
readme = "README.md"

[dependencies]
measurements = "0.4.0"
i2cdev = "0.3.1"
byteorder = "1.0.0"
libc = { version = "0.2.0", optional = true }

[build-dependencies]
gcc = "0.3"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = ["rtimu"]
rtimu = [ "libc" ]

[package.metadata.docs.rs]
features = [ ]
all-features = false
no-default-features = true
