[package]
name = "sensehat"
version = "0.4.0"
authors = ["Jonathan Pallant <github@thejpster.org.uk>"]
license-file = "LICENSE.md"
documentation = "https://docs.rs/crate/sensehat"
repository = "https://github.com/thejpster/sensehat-rs"
keywords = ["sensehat", "raspberry", "pi", "sensors"]
description = "Interface with the Raspberry Pi Foundation's official Sense HAT sensor board."
readme = "README.md"

[dependencies]
measurements = "0.10.2"
i2cdev = "0.4.0"
byteorder = "1.0"
sensehat-screen = "0.1.8"
# sensehat-screen = { path = "../sensehat-screen-rs" }
libc = { version = "0.2", optional = true }

[build-dependencies]
gcc = "0.3"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional.
default = ["rtimu"]
rtimu = [ "libc" ]

[package.metadata.docs.rs]
features = [ ]
all-features = false
no-default-features = true
