[package]
name = "sensehat"
version = "1.0.0"
authors = ["Jonathan Pallant <github@thejpster.org.uk>"]
license-file = "LICENSE.md"
documentation = "https://docs.rs/crate/sensehat"
repository = "https://github.com/thejpster/sensehat-rs"
keywords = ["sensehat", "raspberry", "pi", "sensors"]
description = "Interface with the Raspberry Pi Foundation's official Sense HAT sensor board."
readme = "README.md"

[dependencies]
measurements = "0.10.2"
i2cdev = "0.4.0"
byteorder = "1.0"
libc = { version = "0.2", optional = true }
sensehat-screen = { version = "0.2", optional = true }
tint = { version = "1.0", optional = true }

[build-dependencies]
gcc = "0.3"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional.
default = ["rtimu", "led-matrix"]
# Extra packages required by these features.
rtimu = ["libc"]
led-matrix = ["sensehat-screen", "tint"]

[package.metadata.docs.rs]
features = ["led-matrix"]
all-features = false
no-default-features = true
